Add new url to manifest, google search logic to google.js, add new input to popup.html and file search logic to popup.js

--- a/employed/manifest.json
+++ b/employed/manifest.json
@@ -12,7 +12,10 @@
   },
   "content_scripts": [
     {
-      "matches": ["https://www.google.com/search?q=site:*"],
+      "matches": [
+        "https://www.google.com/search?q=site:*",
+        "https://www.google.com/search?q=filetype:*"
+      ],
       "js": ["content_scripts/google.js"]
     }
   ]
